assets/css/style.css
/* ... */
.embla__button:hover {
  color: #FFF;
  background: rgba(255, 255, 255, 0.037);
  transition: all 0.3s ease-in-out;
}

.embla__button:disabled {
  color: var(--detail-high-contrast);
}

.embla__button__svg {
  width: 35%;
  height: 35%;
}

.embla__dots {
  display: flex;
  flex-wrap: wrap;
  justify-content: flex-end;
  align-items: center;
  margin-right: calc((2.6rem - 1.4rem) / 2 * -1);
}

.embla__dot {
  -webkit-tap-highlight-color: rgba(var(--text-high-contrast-rgb-value), 0.5);
  -webkit-appearance: none;
  appearance: none;
  background-color: transparent;
  touch-action: manipulation;
  display: inline-flex;
  text-decoration: none;
  cursor: pointer;
  border: 0;
  padding: 0;
  margin: 0;
  width: 2.6rem;
  height: 2.6rem;
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 50%;
  transition: all 0.3s ease;
  transition: all 0.2s ease-in-out;
}

.embla__dot:after {
  background: #FF7F7F;
  width: 8px;
  height: 8px;
  border-radius: 50%;
  display: flex;
  align-items: center;
  content: '';
  border: 1px solid transparent;
  margin: 15px;
  transition: all 0.2s ease-in-out;
}

.embla__dot:hover:after {
  background: #FFF;
  transform: scale(1.5);
  transition: all 0.3s ease;
}

.embla__dot--selected:after {
  content: '';
  background: #FFF;
  border-radius: 100%;
  transition: all 0.3s ease;
  transform: scale(1.5);
  transition: all 0.2s ease-in-out;
}

.slide-number {
  position: absolute;
  right: 0;
  top: 0;
  width: 60px;
  height: 60px;
  background: #FF7F7F;
  line-height: 60px;
  z-index: 10;
  letter-spacing: 0.5px;
  font-weight: 600;
  color: #FFF;
  text-shadow: 1px 1px 2px rgba(150, 150, 150, 0.36);
  border-radius: 0px 20px 0px 20px;
}

.slide-description {
  position: absolute;
  bottom: 29px;
  left: 59px;
  text-align: left;
  color: #fff;
  font-size: 12px;
  text-transform: uppercase;
  font-weight: 500;
  font-family: 'Poppins',sans-serif;
  letter-spacing: 4px;
  padding-left: 35px;
  transition: all 200ms linear;
}

.featured-projects .slide-description::before {
  top: -15px;
  width: 20px;
  height: 2px;
  margin-top: 25px;
  left: 0;
  transition: all 200ms linear;
}

.featured-projects .slide-description:hover {
  padding-left: 50px;
}

.featured-projects .slide-description:hover::before {
  width: 35px;
}

/* 08. About */

.about-section,
.contact-section {
  width: 100%;
  height: 100vh;
  position: relative;
  z-index: 4;
  background: #2A2A2E;
  box-sizing: border-box;
  padding-left: 80px;
}

.about-section h3,
.slider-title h3,
.contact-section h3 {
  color: #fff;
  font-family: 'Poppins', sans-serif;
  font-size: clamp(1.25rem, 0.65rem + 3.45vw, 2.5rem); /* font-size: 40px */
  text-align: left;
  padding-bottom: 25px;
  position: relative;
}

.about-section p,
.contact-section p {
  padding-top: 10px;
  max-width: 515px;
}

.about-section h3::before,
.featured-projects h3::before,
.contact-section h3::before {
  background: #FF7F7F;
  content: '';
  position: absolute;
  top: 84%;
  width: 50px;
  height: 2px;
}

.two-column-grid {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-gap: 70px;
}

.three-column-grid {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-gap: 25px;
}

.three-column-grid .column {
  align-items: center;
}

.column {
  display: flex;
  justify-content: center;
  flex-direction: column;
}

.about-section .two-column-grid p,
.slider-title p,
.contact-section p {
  color: #fff;
  text-align: left;
  font-size: 15px;
  line-height: 24px;
  padding-bottom: 10px;
  text-transform: initial;
  font-weight: 400;
  letter-spacing: 1px;
}

.slider-title p {
  padding-top: 10px;
}

.tech-stack-item {
  flex-direction: column;
  position: relative;
  align-items: center;
  justify-content: space-evenly;
  height: clamp(3.75rem, 2.84rem + 3.64vw, 6.25rem);
  width: clamp(5rem, 2.95rem + 9.09vw, 10rem);
  border: double 3px transparent;
    border-top-width: 3px;
    border-right-width: 3px;
    border-bottom-width: 3px;
    border-left-width: 3px;
    border-image-slice: 100%;
  border-image-slice: 1;
  border-width: 3px;
  background-image: linear-gradient(#2D2D32, #2D2D32),radial-gradient(circle at top left, #FF7F7F, #FF7F7F);
  border-radius: 10px;
  background-origin: border-box;
  background-clip: content-box, border-box;
  overflow: hidden;
}

.tech-stack-item:not(:last-child) {
  margin-bottom: 25px;
}

.tech-stack-img {
  height: clamp(2.19rem, 1.73rem + 1.82vw, 3.44rem);
}

.about-section .two-column-grid .tech-stack-caption {
  font-size: clamp(0.8rem, 0.44rem + 1.6vw, 1rem);
  font-weight: 600;
  line-height: 1;
  letter-spacing: 1px;
  padding: 0;
}

/* 09. Contact */

.contact-socials {
  display: flex;
  flex-direction: row;
  gap: 20px;
  margin-top: 20px;
}

.contact-socials li a {
  width: 50px;
  height: 50px;
  line-height: 50px;
  color: rgba(255, 255, 255, 0.41);
  font-size: 20px;
}

.contact-section p {
  position: relative;
}

.contact-section p a {
  color: #FFF;
  font-weight: 600;
}

.contact-section p a::after {
  background: #FF7F7F;
  content: '';
  position: absolute;
  left: 0;
  bottom: 25%;
  width: 123px;
  height: 1.3px;
  left: 0%;
}

/* 10. Media Queries */

@media (max-width: 1294px) {
  .two-column-grid {
    grid-template-columns: 1fr;
    grid-gap: 35px;
  }

  .two-column-grid > .column:last-child {
    order: -1;
  }

  .about-section {
    height: auto;
  }
}
/* ... */

